--- a/BookBeeBeeProject/BE/BookBee/appsettings.json
+++ b/BookBeeBeeProject/BE/BookBee/appsettings.json
@@ -5,5 +5,41 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\mylocodb;Initial Catalog=BookBeeBeeProject;Integrated Security=True"
+  },
+  "JwtSettings": {
+    "SecretKey": "my-long-secret-key-that-is-at-least-32-characters-long",
+    "ExpiresInMinutes": "1440", // 1 day
+    "Issuer": "https://example.com",
+    "Audience": "https://example.com"
+  },
+  "CloudinarySettings": {
+    "CloudName": "your-cloud-name",
+    "ApiKey": "your-api-key",
+    "ApiSecret": "your-api-secret"
+  },
+  "FacebookSettings": {
+    "AppId": "your-app-id",
+    "AppSecret": "your-app-secret",
+    "RedirectUri": "your-redirect-uri"
+  },
+  "GoogleSettings": {
+    "ClientId": "your-client-id",
+    "ClientSecret": "your-client-secret",
+    "RedirectUri": "your-redirect-uri"
+  },
+  "VnPaySettings": {
+    "vnp_Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "vnp_TmnCode": "your-vnpay-tmn-code",
+    "vnp_HashSecret": "your-vnpay-hash-secret",
+    "vnp_ReturnUrl": "https://localhost:7273/api/VnPay"
+  },
+  "SendGridSettings": {
+    "ApiKey": "your-sendgrid-api-key",
+    "From": "radzenbook@gmail.com",
+    "FromName": "noreply.bookstack"
+  }
 }
+
