book cart order thong ke vnp

--- a/BookBeeBeeProject/BE/BookBee/appsettings.json
+++ b/BookBeeBeeProject/BE/BookBee/appsettings.json
@@ -20,16 +20,7 @@
     "ApiKey": "your-api-key",
     "ApiSecret": "your-api-secret"
   },
-  "FacebookSettings": {
-    "AppId": "your-app-id",
-    "AppSecret": "your-app-secret",
-    "RedirectUri": "your-redirect-uri"
-  },
-  "GoogleSettings": {
-    "ClientId": "your-client-id",
-    "ClientSecret": "your-client-secret",
-    "RedirectUri": "your-redirect-uri"
-  },
+
   "VnPaySettings": {
     "vnp_Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "vnp_TmnCode": "your-vnpay-tmn-code",
@@ -38,7 +29,7 @@
   },
   "SendGridSettings": {
     "ApiKey": "your-sendgrid-api-key",
-    "From": "radzenbook@gmail.com",
+    "From": "bookbeestore@gmail.com",
     "FromName": "noreply.bookstack"
   }
 }
