--- a/BookBeeBeeProject/FE/Fe_Admin/Fe_Admin.csproj
+++ b/BookBeeBeeProject/FE/Fe_Admin/Fe_Admin.csproj
@@ -1906,6 +1906,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
 
   <ItemGroup>
